# NastranIOConvert

./: AGENTS.md  README.md  main.py  pyproject.toml  模态转换与变形场放大.md
data/: tbeamf.bdf  tbeamf.f06  tbeamode.bdf  tbeamode.f06
docs/: tbeamf_位移链路真实数据说明.md
nastranioconvert/: __init__.py  models.py
nastranioconvert/parsers/: __init__.py  bdf.py  modal.py
nastranioconvert/services/: __init__.py  reconstruction.py  strain.py
nastranioconvert/ui/: debug_panel.py  default_case.py  streamlit_app.py
nastranioconvert/utils/: __init__.py  io.py  text.py
nastranioconvert/visualization/: __init__.py  figures.py
